--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "jest",
     "lint": "eslint . --ext .ts",
     "mcp": "npx tsx src/mcp-simple.ts",
-    "mcp:debug": "npx tsx --inspect src/mcp-simple.ts"
+    "mcp:debug": "npx tsx --inspect src/mcp-simple.ts",
+    "web-api": "npm run build && node dist/web-api-server.js",
+    "web-api:dev": "NODE_OPTIONS='--loader ts-node/esm' nodemon --exec ts-node --project tsconfig.node.json src/web-api-server.ts"
   },
   "keywords": [
     "mcp",
@@ -54,7 +56,7 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.19",
     "@types/csv-parse": "^1.1.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
